# sigsynth-pro

./: .gitmodules  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
macros/: sig53.yaml  wideband_sig53.yaml
sigsynth/: __init__.py  generator.py  hdf5_export.py  macro_manager.py  models.py  numpy_synth.py  paths.py  post_transforms.py  preview.py  registry.py  validator.py
